# OpenICU

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml  pytest.ini
.devcontainer/: .env  Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh  post-start.sh
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: continuous_delivery.yaml  continuous_delivery.yml  continuous_integration.yml
config.example/: README.md
config/02_concept/chemistry/: blood_urea_nitrogen.yml  phosphate.yml
config/02_concept/hematology/: partial_thromboplastin_time.yml
config/02_concept/respiratory/: arterial_oxygen_saturation.yml
config/concept/: antibiotics.yml  creatinine.yml
config/concept-cur/blood_gas/: base_excess.yml  methemoglobin.yml  pH_of_blood.yml
config/concept-cur/chemistry/: albumin.yml  bicarbonate.yml  calcium.yml  chloride.yml  creatinine.yml  troponin_I.yml
config/concept-cur/demographics/: patient_height.yml
config/concept-cur/hematology/: band_form_neutrophils.yml  erythrocyte_distribution_width.yml  fibrinogen.yml  hematocrit.yml  mean_corpuscular_hemoglobin_concentration.yml  neutrophils.yml  prothrombin_time_per_international_normalized_ratio.yml  red_blood_cell_count.yml
config/concept-cur/medications/: dopamine_duration.yml  epinephrine_rate.yml
config/concept-cur/neurological/: Richmond_agitation_sedation_scale.yml
config/concept-cur/respiratory/: respiratory_rate.yml
config/concept-cur/vitals/: diastolic_blood_pressure.yml  endtidal_CO2.yml  systolic_blood_pressure.yml
config/concept/blood_gas/: CO2_partial_pressure.yml  O2_partial_pressure.yml  base_excess.yml  calcium_ionized.yml  carboxyhemoglobin.yml  fraction_of_inspired_oxygen.yml  lactate.yml  methemoglobin.yml  pH_of_blood.yml  totcal_CO2.yml
config/concept/chemistry/: C-reactive_protein.yml  alanine_aminotransferase.yml  albumin.yml  alkaline_phosphatase.yml  aspartate_aminotransferase.yml  bicarbonate.yml  bilirubin_direct.yml  blood_urea_nitrogen.yml  calcium.yml  chloride.yml  creatine_kinase.yml  creatine_kinase_MB.yml  glucose.yml  magnesium.yml  phosphate.yml  potassium.yml  sodium.yml  total_bilirubin.yml  troponin_I.yml  troponin_t.yml
config/concept/demographics/: patient_height.yml  patient_weight.yml
config/concept/hematology/: Hemoglobin_A1C.yml  band_form_neutrophils.yml  basophils.yml  eosinophils.yml  erythrocyte_distribution_width.yml  erythrocyte_sedimentation_rate.yml  fibrinogen.yml  hematocrit.yml  hemoglobin.yml  lymphocytes.yml  mean_corpuscular_hemoglobin.yml  mean_corpuscular_hemoglobin_concentration.yml  mean_corpuscular_volume.yml  neutrophils.yml  partial_thromboplastin_time.yml  platelet_count.yml  prothrombin_time_per_international_normalized_ratio.yml  prothrombine_time.yml  red_blood_cell_count.yml  white_blood_cell_count.yml
config/concept/medication/: antibiotics.yml
config/concept/medication-old/: antibiotics.yml
config/concept/medications/: antibiotics.yml  antibiotics2.yml  corticosteroids.yml  dextrose_(as_D10).yml  dobutamine_duration.yml  dobutamine_rate.yml  dopamine_duration.yml  dopamine_rate.yml  epinephrine_duration.yml  epinephrine_rate.yml  insulin.yml  norepinephrine_duration.yml  norepinephrine_rate.yml  phenylephrine_rate.yml  (+1 more)
configs/source/: eicu.yml  mimic.yml
definitions/cohort/: timeframe.yml
definitions/concepts/: Age.yml  AirwayPlateauPressure.yml  BodyHeight.yml  BodyTemperature.yml  BodyWeight.yml  BreathingRate.yml  Creatinine_absolute_serum.yml  DiastolicBloodPressue_Arterial_Invasive.yml  DiastolicBloodPressue_Arterial_noninvasive.yml  FiO2.yml  Gender.yml  HeartRate.yml  ICUEncounter.yml  MeanBloodPressue_Arterial_Invasive.yml  MeanBloodPressue_Arterial_Noninvasive.yml  Norepinephrine_dosage.yml  OxygenSaturation_Peripheral.yml  PEEP.yml  SystolicBloodPressure.yml  SystolicBloodPressure_Arterial_Invasive.yml  SystolicBloodPressure_Arterial_noninvasive.yml  TidalVolume.yml  UrineVolume.yml  Vasopressine_dosage.yml
definitions/preprocessor/: aki.yml
definitions/preprocessors/: aki.yml
definitions/sources/: eicu.yml  mimic.yml
definitions/units/: weight.yml
docs/: index.md
docs/arc/: building_block.md  concepts.md  constraints.md  context.md  decisions.md  deployment.md  introduction.md  quality.md  risks.md  runtime.md  strategy.md
docs/docs/: index.md
docs/getting_started/: basic_usage.md  contributing.md  installation.md  overview.md
docs/scripts/: gen_ref_pages.py
docs/user_guide/: concepts.md  expressions.md  extraction.md  pipeline.md  versioning.md
example/: dataset.ipynb  example.ipynb  example_eicu.ipynb  example_mimic.ipynb  pipeline.ipynb  test.ipynb
example/config/: concept.yml  extraction.yml  persistence.yml  pipeline.yml  sharding.yml
examples/: README.md  pipeline.ipynb
examples/ricu_converter/: 01_generate_ricu_configs.ipynb  README.md
examples/yaib_export/: 01_export_yaib_dynamic_tables.ipynb  README.md
open_icu/conf/: __init__.py  base.py  proto.py  service.py  test.py  utils.py
open_icu/data/: proto.py  sql.py
open_icu/db/: proto.py  sql.py
open_icu/di/: container.py
open_icu/step/: __init__.py  base.py  exception.py  proto.py
open_icu/steps/: __init__.py  base.py  exceptions.py
open_icu/type/: subject.py
open_icu/types/: __init__.py  base.py
src/open_icu/: __init__.py  logging.py  metrics.py  representation.py
tests/: test_example.py  test_shipped_configs.py
tests/callbacks/: test_callbacks.py  test_interpreter.py  test_registry.py
tests/config/: test_base.py  test_inheritance.py  test_registry.py
tests/steps/: conftest.py  test_concept_config.py  test_concept_step.py  test_extraction_config.py  test_extraction_step.py  test_icd_transformer.py  test_inheritance_steps.py  test_sharding_step.py  test_sofa_components.py  test_sofa_renal_transformer.py  test_suspected_infection.py  test_windowed_transformer.py
tests/storage/: test_storage.py
tests/utils/: test_utils.py
(+1096 files in other folders)
