[project]
name = "open_icu"
description = "This is a project to unify and analyse data from different ICU data sources."
version = "0.0.1"
license = "MIT"
authors = [
    { name = "Paul-B98", email = "115164840+Paul-B98@users.noreply.github.com" }
]
maintainers = [
    { name = "Paul-B98", email = "115164840+Paul-B98@users.noreply.github.com" }
]
readme = "README.md"
keywords = ["Data", "ICU", "Healthcare"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250516",
]

[project.urls]
homepage = "https://github.com/aidh-ms/OpenICU"
repository = "https://github.com/aidh-ms/OpenICU"
changelog = "https://github.com/aidh-ms/OpenICU/releases"
issues = "https://github.com/aidh-ms/OpenICU/issues"
documentation = "https://github.com/aidh-ms/OpenICU/wiki"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.14",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings-python>=1.16.12",
    "pymdown-extensions>=10.15",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["src"]
addopts = [
    "--cov",
    "--cov-branch",
    "--cov=src",
    "--cov-report=xml",
    "--import-mode=importlib",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
exclude = [
    "docs/*",
]
