[project]
name = "open-icu"
description = "This is a project to unify and analyse data from different ICU data sources."
version = "0.0.1"
license = "MIT"
authors = [
    { name = "Paul-B98" },
    { name = "TobiasVeronaLaser" },
    { name = "prockenschaub" }
]
maintainers = [
    { name = "Paul-B98" },
    { name = "TobiasVeronaLaser" },
    { name = "prockenschaub" }
]
readme = "README.md"
keywords = ["Data", "ICU", "Healthcare"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "meds>=0.4.0",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20260518",
]

[project.urls]
homepage = "https://github.com/aidh-ms/OpenICU"
repository = "https://github.com/aidh-ms/OpenICU"
changelog = "https://github.com/aidh-ms/OpenICU/releases"
issues = "https://github.com/aidh-ms/OpenICU/issues"
documentation = "https://github.com/aidh-ms/OpenICU/wiki"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_icu"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "config"

[tool.hatch.build.targets.sdist]
include = [
    "src/open_icu",
    "config",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.8",
    "pytest>=9.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-section-index>=0.3.12",
    "mkdocstrings[python]>=1.0.4",
]

[tool.uv]
exclude-newer = "P7D"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["src"]
addopts = [
    "--cov=src",
    "--cov-branch",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--import-mode=importlib",
]
